# sfml_starter_template

./: README.md
sfml_starter_template/: CMakeLists.txt  main.cpp
